# YiDao

./: .gitignore  README.md  RUN.md
.cursor/skills/yidao-tech-stack/: SKILL.md
backend/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose-dev.yml  docker-compose-monitoring.yml  docker-compose-prod.yml  docker-compose-qa.yml  docker-compose.yml  main.py  print_routes.py  pyproject.toml
backend/.claude/skills/structured-workflow/: SKILL.md
backend/.github/workflows/: cd.yml  ci.yml
backend/app/: constants.py  dependencies.py  main.py  tasks.py
backend/app/ai/: graph.py  llm.py  state.py
backend/app/ai/nodes/: bucket_update.py  case_manager.py  coach_agent.py  parse_agent.py  pattern_skill.py  render.py  safety.py
backend/app/ai/prompts/: __init__.py
backend/app/ai/schemas/: coach_output.py  parse_result.py
backend/app/api/: router.py  system.py
backend/app/api/v1/: __init__.py  admin_skills.py  auth.py  tasks.py  users.py
backend/app/core/: __init__.py  audit.py  config.py  database.py  health.py  logger.py  metrics.py  ratelimit.py  redis.py  security.py  tracing.py
backend/app/exceptions/: __init__.py  base.py  handlers.py
backend/app/middlewares/: __init__.py
backend/app/models/: __init__.py  audit_log.py  base.py  pattern_skill.py  user.py
backend/app/repository/: pattern_skill_repository.py  user_repository.py
backend/app/schemas/: auth.py  common.py  pattern_skill.py  token.py  user.py
backend/app/services/: auth_service.py  pattern_skill_service.py  user_service.py
backend/app/utils/: __init__.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial.py  002_add_audit_logs.py  003_add_pattern_skills.py
backend/monitoring/: prometheus.yml
backend/monitoring/grafana/provisioning/dashboards/: dashboard.yml  fastapi-dashboard.json
backend/monitoring/grafana/provisioning/datasources/: datasource.yml
backend/scripts/: docker-clean.ps1  docker-dev.ps1  docker-down.ps1  docker-logs.ps1  docker-prod.ps1  docker-qa.ps1  docker-rebuild.ps1  docker-restart.ps1  docker-status.ps1  test-celery.ps1  utils.ps1
backend/tests/: README.md  TESTING_STRATEGY.md  conftest.py  utils.py
backend/tests/api/: test_auth.py  test_users.py
backend/tests/e2e/: __init__.py
backend/tests/integration/: __init__.py
backend/tests/performance/: __init__.py
backend/tests/security/: __init__.py
backend/tests/unit/: test_user_service.py
backend/tests/unit/repository/: __init__.py  test_user_repository.py
frontend/: .env.example  README.md  orval.config.ts  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  customFetch.ts
frontend/src/config/: index.ts
frontend/src/pages/: ChatPage.tsx  (+1 more)
(+3 files in other folders)
